# flowerpot-prototype

./: Cargo.toml  ambient.toml
assets/: pipeline.json
assets/crops/: corn seeds.glb  corn1.glb  iris.glb  maize2.glb  maize3.glb  maize4.glb  maize_seeds.glb  tomatoes1.glb  tomatoes2.glb  tomatoes3.glb  tomatoes4.glb  tomatoes5.glb
assets/fauna/: CREDITS.txt  rabbit.glb
assets/items/: maize.glb  tomato_seeds.glb
assets/materials/: CREDITS.txt  pipeline.json  pipeline.toml
assets/player/: player.glb
schema/: crafting.toml  crops.toml  items.toml  map.toml  player.toml
src/: client.rs  crop.rs  fauna.rs  items.rs  map.rs  partitioning.rs  player.rs  server.rs
src/client/: crops.rs  items.rs  map.rs  mod.rs  player.rs
src/core/client/: crops.rs  mod.rs  player.rs
src/core/server/: data.rs  map.rs  player.rs
src/grid/: mod.rs
src/mesh_descriptor/: mod.rs
src/server/: crop.rs  data.rs  fauna.rs  items.rs  map.rs  mod.rs  partitioning.rs  player.rs
src/shared/: mod.rs  partitioning.rs
src/tooling/: mod.rs
src/tree/: mod.rs
