[package]
name = "flowerpot_prototype"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "8eb1a79" }
lazy_static = "1.4"
parry2d = "0.13"
slab = "0.4"
#ambient_sproutz = {git = "https://github.com/mebyz/ambient_sproutz.git"}
rand_pcg = "0.3.1"
noise = { version = "0.8.2", features = ["images"] }
palette = "0.7.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = "1.0.163"
image = "0.24.6"

[[bin]]
name = "client_flowerpot_prototype"
path = "src/client/mod.rs"
required-features = ["client"]

[[bin]]
name = "server_flowerpot_prototype"
path = "src/server/mod.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]