[package]
name = "flowerpot_prototype"

edition = "2021"
publish = false
version = "0.0.1"

[dependencies]
ambient_api = { git = "https://github.com/AmbientRun/Ambient.git", rev = "9e753d3" }
lazy_static = "1.4"
once_cell = "1.18"
parry2d = "0.13"
slab = "0.4"

[[bin]]
name = "client_flowerpot_prototype"
path = "src/client/mod.rs"
required-features = ["client"]

[[bin]]
name = "server_flowerpot_prototype"
path = "src/server/mod.rs"
required-features = ["server"]

[features]
client = ["ambient_api/client"]
server = ["ambient_api/server"]